Add 'Book Now' button to service modals

--- a/index.html
+++ b/index.html
@@ -133,6 +133,7 @@
       <img src="images/service-logo-bottle.png" alt="Move In / Move Out Icon" class="service-logo">
       <h3>Routine Housekeeping</h3>
       <p>Our regular housekeeping service includes weekly or bi-weekly cleaning of all main living areas. We'll dust surfaces, vacuum carpets and rugs, mop floors, clean bathrooms thoroughly, sanitize kitchen surfaces, and take out trash. Perfect for maintaining a clean and healthy home environment.</p>
+        <a href="#contact" class="book-btn">Book Now</a>
       <span class="close">&times;</span> 
     </div>
   </div>
@@ -142,6 +143,7 @@
       <img src="images/service-logo-mop.png" alt="Move In / Move Out Icon" class="service-logo">
       <h3>Top-to-Bottom Deep Clean</h3>
       <p>Our comprehensive deep cleaning service goes beyond regular housekeeping. We clean baseboards, window sills, light fixtures, ceiling fans, inside appliances (oven, refrigerator, microwave), scrub tile grout, wash walls, and clean inside cabinets and drawers. Ideal for seasonal cleaning or preparing for special events.</p>
+        <a href="#contact" class="book-btn">Book Now</a>
       <span class="close">&times;</span>
     </div>
   </div>
@@ -151,6 +153,7 @@
       <img src="images/service-logo-movein.png" alt="Move In / Move Out Icon" class="service-logo">
       <h3>Move-In / Move-Out Clean</h3>
       <p>Perfect for moving transitions, this service ensures your new home is spotless before you move in, or your old home is pristine for the next occupants. Includes deep cleaning of all rooms, inside and outside of all appliances, cabinets, closets, and thorough sanitization.</p>
+        <a href="#contact" class="book-btn">Book Now</a>
       <span class="close">&times;</span>
     </div>
   </div>
@@ -160,6 +163,7 @@
       <img src="images/service-logo-office.png" alt="Move In / Move Out Icon" class="service-logo">
       <h3>Office & Commercial Cleaning</h3>
       <p>Professional cleaning services for offices, retail spaces, and commercial buildings. We offer flexible scheduling including after-hours cleaning, desk and workspace sanitization, restroom maintenance, floor care, and common area cleaning to keep your business environment clean and professional.</p>
+        <a href="#contact" class="book-btn">Book Now</a>
       <span class="close">&times;</span>
     </div>
   </div>
@@ -169,6 +173,7 @@
       <img src="images/service-logo-chair.png" alt="Move In / Move Out Icon" class="service-logo">
       <h3>Carpet & Upholstery Cleaning</h3>
       <p>Professional cleaning for carpets, rugs, and upholstered furniture. Our service includes stain removal, odor treatment, fabric protection application, and deep extraction cleaning that removes dirt, allergens, and bacteria from deep within fibers.</p>
+        <a href="#contact" class="book-btn">Book Now</a>
       <span class="close">&times;</span>
     </div>
   </div>
