--- a/index.html
+++ b/index.html
@@ -19,7 +19,12 @@
 {"@context":"https://schema.org","@type":"LocalBusiness","name":"NeatNest LLC","image":"https://neatnestllc.com/images/logo.jpg","telephone":"+1-203-500-9806","email":"info@neatnestllc.com","url":"https://neatnestllc.com/","address":{"@type":"PostalAddress","addressLocality":"Wallingford","addressRegion":"CT","addressCountry":"US"},"areaServed":["Branford, CT, USA","Cheshire, CT, USA","Guilford, CT, USA","East Haven, CT, USA","Middlefield, CT, USA","Durham, CT 06422, USA","Madison, CT 06443, USA","North Haven, CT 06473, USA","Wallingford, CT 06492, USA","North Branford, CT 06471, USA"],"openingHours":["Mo-Su 07:00-20:00"],"makesOffer":[{"@type":"Offer","itemOffered":"Routine Housekeeping"},{"@type":"Offer","itemOffered":"Top-to-Bottom Deep Clean"},{"@type":"Offer","itemOffered":"Move-In / Move-Out Clean"},{"@type":"Offer","itemOffered":"Office & Commercial Cleaning"},{"@type":"Offer","itemOffered":"Carpet & Upholstery Cleaning"}]}
     </script>
 
-
+<!-- Open Graph Meta Tags -->
+<meta property="og:title" content="Neat Nest LLC | Professional Home Cleaning in Wallingford, Durham & North Haven">
+<meta property="og:description" content="Neat Nest LLC offers deep cleaning, routine cleaning, and carpet cleaning in Wallingford, Durham, North Haven, and surrounding areas. Reliable, friendly, and thorough home cleaning services.">
+<meta property="og:type" content="website">
+<meta property="og:url" content="https://neatnestllc.com/">
+<meta property="og:image" content="https://www.neatnestllc.com/images/OG_logo.png">
 
 </head>
 <body>
