Update Open Graph image URL in index.html

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
  
   <meta property="og:title" content="NeatNest LLC — We keep the neatest nests!" />
   <meta property="og:description" content="Family-owned cleaning company in Wallingford, CT. Deep cleans, routine housekeeping, move-in/move-out, office cleaning, and carpet & upholstery." />
-  <meta property="og:image" content="https://neatnestllc.com/images/logo.jpg" />
+  <meta property="og:image" content="https://neatnestllc.com/images/OG_logo.png" />
   <meta property="og:url" content="https://neatnestllc.com/" />
   <meta property="og:type" content="website" />
   <title>NeatNest LLC — We keep the neatest nests!</title>
