--- a/index.html
+++ b/index.html
@@ -12,6 +12,13 @@
   <meta property="og:type" content="website" />
   <title>NeatNest LLC — We keep the neatest nests!</title>
   <link rel="icon" href="images/favicon32.png" type="image/png">
+  
+  <!-- Google Fonts performance optimization -->
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link rel="preload" as="style" href="https://fonts.googleapis.com/css2?family=Fredoka:wght@400;500;700&family=Nunito:wght@400;600;700&family=Quicksand:wght@500;700&display=swap">
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Fredoka:wght@400;500;700&family=Nunito:wght@400;600;700&family=Quicksand:wght@500;700&display=swap" media="print" onload="this.media='all'">
+
   <link rel="stylesheet" href="style.css" />
 
     <link rel="canonical" href="https://neatnestllc.com/" />
