--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
         <img src="images/facebook.svg" alt="Facebook logo" />
       </a>
       <a href="https://www.instagram.com/neatnestct" target="_blank" aria-label="Instagram">
-        <img src="images/instagram.svg" alt="Instagram logo" />
+        <img src="images/Instagram.svg" alt="Instagram logo" />
       </a>
       <a href="https://www.google.com/search?q=neat+nest+llc&rlz=1C5CHFA_enUS1116US1116&oq=neat+nest+llc&gs_lcrp=EgZjaHJvbWUyCQgAEEUYORiABDIICAEQABgWGB4yCAgCEAAYFhgeMggIAxAAGBYYHjINCAQQABiGAxiABBiKBTIGCAUQRRg8MgYIBhBFGDwyBggHEEUYPNIBCDIxMDhqMGo0qAIAsAIB&sourceid=chrome&ie=UTF-8" target="_blank" aria-label="Google Business Profile">
       <img src="images/google.svg" alt="Google logo" />
