Update title and header content for SEO

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <meta property="og:image" content="https://neatnestllc.com/images/OG_logo.png" />
   <meta property="og:url" content="https://neatnestllc.com/" />
   <meta property="og:type" content="website" />
-  <title>NeatNest LLC — We keep the neatest nests!</title>
+  <title>House Cleaning in Wallingford, CT | NeatNest Cleaning Services</title>
   <link rel="icon" href="images/favicon32.png" type="image/png">
   
   <!-- Google Fonts performance optimization -->
@@ -43,9 +43,9 @@
 </div>
 
     <img src="images/logo.jpg" alt="NeatNest LLC logo" class="logo" />
-    <h1>NeatNest LLC</h1>
-    <p>NeatNest LLC — family-owned cleaning in Wallingford & nearby communities. Reliable, detail-oriented cleaning services for homes and businesses.</p>
-    <a class="call-btn" href="tel:+12035007034">CALL NOW</a>
+    <h1>Professional House Cleaning in Wallingford, CT</h1>
+    <p>NeatNest LLC is a family-owned cleaning company based in Wallingford, CT. We provide reliable, detail-oriented cleaning services for homes and local businesses throughout the community.</p>
+    <a class="call-btn" href="tel:+12035009806">CALL NOW</a>
   </header>
 
   <main>
