--- a/index.html
+++ b/index.html
@@ -55,8 +55,14 @@
       <p>We started NeatNest LLC with one goal in mind: to make every home and office we touch feel fresh, comfortable, and cared for. Our name reflects our belief that a clean space is the heart of a happy home or thriving business. With years of experience, we take pride in ensuring every space meets our high standards of care.</p>
     </section>
 
-<section id="services" class="section">
-  <h2>Our Services</h2>
+    <section id="wallingford" class="section">
+      <h2>Proudly Serving Wallingford, CT</h2>
+      <p>NeatNest LLC is based right here in Wallingford, CT. We love helping our neighbors keep clean, comfortable homes with reliable and detailed cleaning services. From Yalesville to East Wallingford and everything in between, we are trusted by families and local businesses throughout the community.</p>
+      <p>“Mike and his crew are a pleasure to have in our home. They are reliable, friendly, and trustworthy.” — Jennifer L., Wallingford</p>
+    </section>
+
+    <section id="services" class="section">
+      <h2>Our Services</h2>
 
   <p>We provide professional cleaning across Wallingford, Branford, Cheshire, Guilford, East Haven, Middlefield, Durham, Madison, North Haven, and North Branford, CT. Services include routine housekeeping, deep cleans, move-in/move-out cleaning, office and commercial cleaning, and carpet & upholstery care. No matter where you are in these communities, our team brings attention to detail and a commitment to keeping your space spotless.</p>  
   <ul class="services">
