Update alt text for service icons in index.html

--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!doctype html>
 <html lang="en">
 <head>
+  <meta charset="utf-8">
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <meta name="google-site-verification" content="mnmC5PS4lYmcLw-1vwb80J6D3rb3r5V0vBiByU0r0yc" />
   <meta name="description" content="Family-owned cleaning company in Wallingford, CT. Deep cleans, routine housekeeping, move-in/move-out, office cleaning, and carpet & upholstery." />
@@ -37,8 +38,8 @@
         <img src="images/Instagram.svg" alt="Instagram logo" />
       </a>
       <a href="https://www.google.com/search?q=neat+nest+llc&rlz=1C5CHFA_enUS1116US1116&oq=neat+nest+llc&gs_lcrp=EgZjaHJvbWUyCQgAEEUYORiABDIICAEQABgWGB4yCAgCEAAYFhgeMggIAxAAGBYYHjINCAQQABiGAxiABBiKBTIGCAUQRRg8MgYIBhBFGDwyBggHEEUYPNIBCDIxMDhqMGo0qAIAsAIB&sourceid=chrome&ie=UTF-8" target="_blank" aria-label="Google Business Profile">
-      <img src="images/google.svg" alt="Google logo" />
-</a>
+        <img src="images/google.svg" alt="Google logo" />
+      </a>
 
 </div>
 
@@ -95,7 +96,7 @@
         <div class="slide active">"Michael and his team came to clean my condo and they did an amazing job. I walked in and could smell the cleanliness in the air. The price is very reasonable for what you get. I will definitely be using them again!" — Sarah M.</div>
         <div class="slide">"Mike and his crew are a pleasure to have in our home. The company is run in a businesslike way, with Mike being very professional. They are reliable, friendly, and trustworthy." — Jennifer L.</div>
         <div class="slide">"Top notch attention to detail. I've tried numerous other cleaning services and no one even comes close!" — Nicki B.</div>
-        <div class="slide">"I could not be Happier with the service from Neat Nest LLC. Had a deep cleaning done before the holidays. It was far beyond what I imagined. Rigs, stove,floors,fixtures. Everything. You won’t be disappointed and won’t find a more trust worthy service in your home." - David T.</div>
+        <div class="slide">"I could not be Happier with the service from Neat Nest LLC. Had a deep cleaning done before the holidays. It was far beyond what I imagined. Rugs, stove,floors,fixtures. Everything. You won’t be disappointed and won’t find a more trust worthy service in your home." - David T.</div>
         <div class="slide">"Mike and his team came and did a garage clean out  for my husband and I. They cleaned and organized everything, as well as removing all the junk and garbage that was left over! They are a great local company and I would highly recommend them!" - Amber T.</div>
       </div>
       <div class="slider-controls">
@@ -141,7 +142,7 @@
   <!-- Service Popup Modals -->
   <div id="routine-modal" class="modal">
     <div class="modal-content">
-      <img src="images/service-logo-bottle.png" alt="Move In / Move Out Icon" class="service-logo">
+      <img src="images/service-logo-bottle.png" alt="Routine housekeeping icon" class="service-logo">
       <h3>Routine Housekeeping</h3>
       <p>Our regular housekeeping service includes weekly or bi-weekly cleaning of all main living areas. We'll dust surfaces, vacuum carpets and rugs, mop floors, clean bathrooms thoroughly, sanitize kitchen surfaces, and take out trash. Perfect for maintaining a clean and healthy home environment.</p>
         <a href="#contact" class="book-btn">Book Now</a>
@@ -151,7 +152,7 @@
 
   <div id="deep-modal" class="modal">
     <div class="modal-content">
-      <img src="images/service-logo-mop.png" alt="Move In / Move Out Icon" class="service-logo">
+      <img src="images/service-logo-mop.png" alt="Deep cleaning icon" class="service-logo">
       <h3>Top-to-Bottom Deep Clean</h3>
       <p>Our comprehensive deep cleaning service goes beyond regular housekeeping. We clean baseboards, window sills, light fixtures, ceiling fans, inside appliances (oven, refrigerator, microwave), scrub tile grout, wash walls, and clean inside cabinets and drawers. Ideal for seasonal cleaning or preparing for special events.</p>
         <a href="#contact" class="book-btn">Book Now</a>
@@ -161,7 +162,7 @@
 
   <div id="move-modal" class="modal">
     <div class="modal-content">
-      <img src="images/service-logo-movein.png" alt="Move In / Move Out Icon" class="service-logo">
+      <img src="images/service-logo-movein.png" alt="Move-in / move-out cleaning icon" class="service-logo">
       <h3>Move-In / Move-Out Clean</h3>
       <p>Perfect for moving transitions, this service ensures your new home is spotless before you move in, or your old home is pristine for the next occupants. Includes deep cleaning of all rooms, inside and outside of all appliances, cabinets, closets, and thorough sanitization.</p>
         <a href="#contact" class="book-btn">Book Now</a>
@@ -171,7 +172,7 @@
 
   <div id="office-modal" class="modal">
     <div class="modal-content">
-      <img src="images/service-logo-office.png" alt="Move In / Move Out Icon" class="service-logo">
+      <img src="images/service-logo-office.png" alt="Office and commercial cleaning icon" class="service-logo">
       <h3>Office & Commercial Cleaning</h3>
       <p>Professional cleaning services for offices, retail spaces, and commercial buildings. We offer flexible scheduling including after-hours cleaning, desk and workspace sanitization, restroom maintenance, floor care, and common area cleaning to keep your business environment clean and professional.</p>
         <a href="#contact" class="book-btn">Book Now</a>
@@ -181,7 +182,7 @@
 
   <div id="carpet-modal" class="modal">
     <div class="modal-content">
-      <img src="images/service-logo-chair.png" alt="Move In / Move Out Icon" class="service-logo">
+      <img src="images/service-logo-chair.png" alt="Carpet and upholstery cleaning icon" class="service-logo">
       <h3>Carpet & Upholstery Cleaning</h3>
       <p>Professional cleaning for carpets, rugs, and upholstered furniture. Our service includes stain removal, odor treatment, fabric protection application, and deep extraction cleaning that removes dirt, allergens, and bacteria from deep within fibers.</p>
         <a href="#contact" class="book-btn">Book Now</a>
