Update JSON-LD script for LocalBusiness schema

--- a/index.html
+++ b/index.html
@@ -23,9 +23,46 @@
   <link rel="stylesheet" href="style.css" />
 
     <link rel="canonical" href="https://neatnestllc.com/" />
-    <script type="application/ld+json">
-{"@context":"https://schema.org","@type":"LocalBusiness","name":"NeatNest LLC","image":"https://neatnestllc.com/images/logo.jpg","telephone":"+1-203-500-7034","email":"info@neatnestllc.com","url":"https://neatnestllc.com/","address":{"@type":"PostalAddress","addressLocality":"Wallingford","addressRegion":"CT","addressCountry":"US"},"areaServed":["Branford, CT, USA","Cheshire, CT, USA","Guilford, CT, USA","East Haven, CT, USA","Middlefield, CT, USA","Durham, CT 06422, USA","Madison, CT 06443, USA","North Haven, CT 06473, USA","Wallingford, CT 06492, USA","North Branford, CT 06471, USA"],"openingHours":["Mo-Su 07:00-20:00"],"makesOffer":[{"@type":"Offer","itemOffered":"Routine Housekeeping"},{"@type":"Offer","itemOffered":"Top-to-Bottom Deep Clean"},{"@type":"Offer","itemOffered":"Move-In / Move-Out Clean"},{"@type":"Offer","itemOffered":"Office & Commercial Cleaning"},{"@type":"Offer","itemOffered":"Carpet & Upholstery Cleaning"}]}
-    </script>
+ <script type="application/ld+json">
+{
+  "@context": "https://schema.org",
+  "@type": ["LocalBusiness", "CleaningService"],
+  "name": "NeatNest LLC",
+  "image": "https://neatnestllc.com/images/logo.jpg",
+  "telephone": "+1-203-500-7034",
+  "email": "info@neatnestllc.com",
+  "url": "https://neatnestllc.com/",
+  "address": {
+    "@type": "PostalAddress",
+    "addressLocality": "Wallingford",
+    "addressRegion": "CT",
+    "addressCountry": "US"
+  },
+  "areaServed": [
+    "Branford, CT, USA",
+    "Cheshire, CT, USA",
+    "Guilford, CT, USA",
+    "East Haven, CT, USA",
+    "Middlefield, CT, USA",
+    "Durham, CT 06422, USA",
+    "Madison, CT 06443, USA",
+    "North Haven, CT 06473, USA",
+    "Wallingford, CT 06492, USA",
+    "North Branford, CT 06471, USA"
+  ],
+  "openingHours": [
+    "Mo-Su 07:00-20:00"
+  ],
+  "makesOffer": [
+    { "@type": "Offer", "itemOffered": "Routine Housekeeping" },
+    { "@type": "Offer", "itemOffered": "Top-to-Bottom Deep Clean" },
+    { "@type": "Offer", "itemOffered": "Move-In / Move-Out Clean" },
+    { "@type": "Offer", "itemOffered": "Office & Commercial Cleaning" },
+    { "@type": "Offer", "itemOffered": "Carpet & Upholstery Cleaning" }
+  ]
+}
+</script>
+
 
 </head>
 <body>
