--- a/index.html
+++ b/index.html
@@ -85,23 +85,25 @@
 </div>
 
     <img src="images/logo.jpg" alt="NeatNest LLC logo" class="logo" />
-    <h1>Professional House Cleaning in Wallingford, CT</h1>
-    <p>NeatNest LLC is a family-owned cleaning company based in Wallingford, CT. We provide reliable, detail-oriented cleaning services for homes and local businesses throughout the community.</p>
+    <h1>NeatNest LLC | Professional House Cleaning Wallingford, CT</h1>
+    <p>NeatNest LLC is a <strong>fully insured and bonded</strong> family-owned cleaning company based in Wallingford, CT. We provide reliable, detail-oriented cleaning services for homes and local businesses.</p>
     <a class="call-btn" href="tel:+12035007034">CALL NOW</a>
   </header>
 
   <main>
     
-    <section id="about" class="section">
-      <h2>A little bit about us…</h2>
-      <p>We started NeatNest LLC with one goal in mind: to make every home and office we touch feel fresh, comfortable, and cared for. Our name reflects our belief that a clean space is the heart of a happy home or thriving business. With years of experience, we take pride in ensuring every space meets our high standards of care.</p>
-    </section>
+  <section id="wallingford" class="section">
+  <h2>Proudly Serving Wallingford, CT</h2>
+  <p><strong>Centrally located in Wallingford, we provide fast, reliable service to homes in the 06492 area and beyond.</strong> NeatNest LLC is based right here in town, helping our neighbors keep clean, comfortable homes. From Yalesville to East Wallingford and everything in between, we are trusted by families and local businesses throughout the community.</p>
+  
+  <!-- Map Embed Start -->
+  <div class="map-container" style="margin: 25px 0; overflow: hidden; border-radius: 12px; border: 2px solid #eee; line-height: 0;">
+    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2991.0666530091457!2d-72.80705282375068!3d41.437775371293576!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x7acd96b0a1a0cd7%3A0x69a2bc28aca585cb!2sNeatNest%20LLC!5e0!3m2!1sen!2sus!4v1767992212703!5m2!1sen!2sus" width="100%" height="300" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+  </div>
+  <!-- Map Embed End -->
 
-    <section id="wallingford" class="section">
-      <h2>Proudly Serving Wallingford, CT</h2>
-      <p>NeatNest LLC is based right here in Wallingford, CT. We love helping our neighbors keep clean, comfortable homes with reliable and detailed cleaning services. From Yalesville to East Wallingford and everything in between, we are trusted by families and local businesses throughout the community.</p>
-      <p>“Mike and his crew are a pleasure to have in our home. They are reliable, friendly, and trustworthy.” — Jennifer L., Wallingford</p>
-    </section>
+  <p>“Mike and his crew are a pleasure to have in our home. They are reliable, friendly, and trustworthy.” — Jennifer L., Wallingford</p>
+</section>
 
     <section id="services" class="section">
       <h2>Our Services</h2>
