Update service descriptions in modals

--- a/index.html
+++ b/index.html
@@ -186,9 +186,9 @@
   <div id="routine-modal" class="modal">
     <div class="modal-content">
       <img src="images/service-logo-bottle.png" alt="Routine housekeeping icon" class="service-logo">
-      <h3>Routine Housekeeping</h3>
-      <p>Our regular housekeeping service includes weekly or bi-weekly cleaning of all main living areas. We'll dust surfaces, vacuum carpets and rugs, mop floors, clean bathrooms thoroughly, sanitize kitchen surfaces, and take out trash. Perfect for maintaining a clean and healthy home environment.</p>
-        <a href="#contact" class="book-btn">Book Now</a>
+      <h3>Regular Maid Service & Housekeeping</h3>
+      <p>NeatNest LLC provides a reliable maid service for Wallingford residents that includes weekly or bi-weekly cleaning of all main living areas.</p>
+      <a href="#contact" class="book-btn">Book Now</a>
       <span class="close">&times;</span> 
     </div>
   </div>
@@ -197,17 +197,15 @@
     <div class="modal-content">
       <img src="images/service-logo-mop.png" alt="Deep cleaning icon" class="service-logo">
       <h3>Top-to-Bottom Deep Clean</h3>
-      <p>Our comprehensive deep cleaning service goes beyond regular housekeeping. We clean baseboards, window sills, light fixtures, ceiling fans, inside appliances (oven, refrigerator, microwave), scrub tile grout, wash walls, and clean inside cabinets and drawers. Ideal for seasonal cleaning or preparing for special events.</p>
-        <a href="#contact" class="book-btn">Book Now</a>
-      <span class="close">&times;</span>
+      <p>Our deep cleaning service is the perfect solution for Wallingford homeowners who need more than a regular housekeeping visit.</p>
     </div>
   </div>
 
   <div id="move-modal" class="modal">
     <div class="modal-content">
       <img src="images/service-logo-movein.png" alt="Move-in / move-out cleaning icon" class="service-logo">
-      <h3>Move-In / Move-Out Clean</h3>
-      <p>Perfect for moving transitions, this service ensures your new home is spotless before you move in, or your old home is pristine for the next occupants. Includes deep cleaning of all rooms, inside and outside of all appliances, cabinets, closets, and thorough sanitization.</p>
+      <h3>Move-In / Move-Out Cleaning Specialists</h3>
+      <p>Perfect for moving transitions in the New Haven County area, this service ensures your new home is spotless before you move in, or your old home is pristine for the next occupants. Includes deep cleaning of all rooms, inside and outside of all appliances, cabinets, closets, and thorough sanitization.</p>
         <a href="#contact" class="book-btn">Book Now</a>
       <span class="close">&times;</span>
     </div>
