Update testimonials and contact section in index.html

--- a/index.html
+++ b/index.html
@@ -136,12 +136,13 @@
     <section id="testimonials" class="section">
       <h2>What people say</h2>
       <div class="slider">
-        <div class="slide active">"Michael and his team came to clean my condo and they did an amazing job. I walked in and could smell the cleanliness in the air. The price is very reasonable for what you get. I will definitely be using them again!" — Sarah M.</div>
+        <div class="slide active">"I could not be Happier with the service from Neat Nest LLC. Had a deep cleaning done before the holidays. It was far beyond what I imagined. Rugs, stove,floors,fixtures. Everything. You won’t be disappointed and won’t find a more trust worthy service in your home." - David T.</div>
         <div class="slide">"Mike and his crew are a pleasure to have in our home. The company is run in a businesslike way, with Mike being very professional. They are reliable, friendly, and trustworthy." — Jennifer L.</div>
         <div class="slide">"Top notch attention to detail. I've tried numerous other cleaning services and no one even comes close!" — Nicki B.</div>
-        <div class="slide">"I could not be Happier with the service from Neat Nest LLC. Had a deep cleaning done before the holidays. It was far beyond what I imagined. Rugs, stove,floors,fixtures. Everything. You won’t be disappointed and won’t find a more trust worthy service in your home." - David T.</div>
         <div class="slide">"Mike and his team came and did a garage clean out  for my husband and I. They cleaned and organized everything, as well as removing all the junk and garbage that was left over! They are a great local company and I would highly recommend them!" - Amber T.</div>
-      </div>
+        <div class="slide">"Michael and his team came to clean my condo and they did an amazing job. I walked in and could smell the cleanliness in the air. The price is very reasonable for what you get. I will definitely be using them again!" — Sarah M.</div>
+</div>
+
       <div class="slider-controls">
         <button id="prev">◀</button>
         <button id="next">▶</button>
@@ -149,29 +150,25 @@
     </section>
 
     <section id="contact" class="section">
-      <h2>Request a Free In-Home Consultation</h2>
-      <form name="contact" method="POST" netlify>
+            <h2>Request a Quote</h2>
+            <p>Serving <strong>Wallingford, CT</strong> & surrounding areas.</p>
+            <form name="contact" method="POST" netlify>
         <input type="hidden" name="form-name" value="contact" />
-        <label>Your Name <input name="name" required /></label>
-        <label>Phone <input name="phone" required /></label>
-        <label>Email <input name="email" type="email" required /></label>
-        <label>Tell us what you need
-          <textarea name="message" rows="4" required></textarea>
-        </label>
+          <label>Your Name <input name="name" required /></label>
+          <label>Phone <input name="phone" required /></label>
+          <label>Email <input name="email" type="email" required /></label>
+          <label>Tell us what you need
+            <textarea name="message" rows="4" required></textarea>
+          </label>
         <button type="submit">Send</button>
-      </form>
+    </form>
               <!-- NEW contact info block -->
 <div class="contact-info">
+  <strong>NeatNest LLC</strong><br>
+  274 Woodhouse Ave, Wallingford, CT 06492<br>
   Phone: <a href="tel:+12035007034">(203) 500-7034</a><br>
   Email: <a href="mailto:info@neatnestllc.com">info@neatnestllc.com</a><br>
-  Hours:<br>
-  Monday: 7 AM–8 PM<br>
-  Tuesday: 7 AM–8 PM<br>
-  Wednesday: 7 AM–8 PM<br>
-  Thursday: 7 AM–8 PM<br>
-  Friday: 7 AM–8 PM<br>
-  Saturday: 7 AM–8 PM<br>
-  Sunday: 7 AM–8 PM
+  <strong>Hours:</strong> Mon–Sun: 7 AM–8 PM
 </div>
 
     </section>
