--- a/index.html
+++ b/index.html
@@ -114,10 +114,12 @@
       <img class="service-logo" src="images/service-logo-bottle.png" alt="Cartoon spray bottle" width="60" height="60">
       Routine Housekeeping
     </li>
-    <li data-service="deep">
-      <img class="service-logo" src="images/service-logo-mop.png" alt="Cartoon broom" width="60" height="60">
-      Top-to-Bottom Deep Clean
-    </li>
+                                    <li>
+                                      <a href="deep-clean.html" style="text-decoration: none; color: inherit; display: flex; flex-direction: column; align-items: center; gap: 10px;">
+                                        <img class="service-logo" src="images/service-logo-mop.png" alt="Cartoon broom" width="60" height="60">
+                                        Top-to-Bottom Deep Clean
+                                      </a>
+                                    </li>
     <li data-service="move">
       <img class="service-logo" src="images/service-logo-movein.png" alt="Cartoon home" width="60" height="60">
       Move-In / Move-Out Clean
