--- a/deep-clean.html
+++ b/deep-clean.html
@@ -197,36 +197,17 @@
 
   </main>
 
-  <!-- Enhanced Footer with NAP (Name, Address, Phone) and Town Links -->
-  <footer class="site-footer" style="background: var(--card); color: var(--ink); padding: 30px 20px; text-align: center; border-top: 3px solid var(--blue);">
-    <div style="max-width: 900px; margin: 0 auto;">
-      <!-- Business NAP Information -->
-      <div style="margin-bottom: 20px;">
-        <p style="margin: 5px 0; font-weight: 700; font-size: 1.2rem; font-family: var(--font-display);">NeatNest LLC</p>
-        <p style="margin: 5px 0;">274 Woodhouse Ave, Wallingford, CT 06492</p>
-        <p style="margin: 5px 0;">
-          <a href="tel:+12035007034" style="color: var(--blue); text-decoration: none; font-weight: 600;">(203) 500-7034</a>
-        </p>
-      </div>
-
-      <!-- Town Links (Hub & Spoke) -->
-      <div style="margin: 20px 0; padding: 15px 0; border-top: 1px solid #e5e7eb; border-bottom: 1px solid #e5e7eb;">
-        <p style="margin: 0 0 10px 0; font-weight: 600;">Proudly Serving:</p>
-        <p style="margin: 0;">
-          <a href="wallingford-cleaning.html" style="color: var(--blue); text-decoration: none; font-weight: 600; margin: 0 10px;">Wallingford</a> •
-          <a href="north-haven-cleaning.html" style="color: var(--blue); text-decoration: none; font-weight: 600; margin: 0 10px;">North Haven</a> •
-          <a href="cheshire-cleaning.html" style="color: var(--blue); text-decoration: none; font-weight: 600; margin: 0 10px;">Cheshire</a>
-        </p>
-      </div>
-
-      <!-- Copyright and Home Link -->
-      <div style="margin-top: 20px; font-size: 0.95rem;">
-        <p style="margin: 5px 0;">
-          © <span id="year"></span> NeatNest LLC • Fully Insured & Bonded • 
-          <a href="index.html" style="color: var(--blue); text-decoration: none;">Home</a>
-        </p>
-      </div>
-    </div>
+  <!-- Compact Single-Line Footer with NAP -->
+  <footer class="site-footer" style="background: var(--card); color: var(--ink); padding: 20px; text-align: center; border-top: 3px solid var(--blue); font-size: 0.95rem;">
+    <p style="margin: 0; line-height: 1.6;">
+      <strong>NeatNest LLC</strong> • 274 Woodhouse Ave, Wallingford, CT 06492 • 
+      <a href="tel:+12035007034" style="color: var(--blue); text-decoration: none; font-weight: 600;">(203) 500-7034</a> • 
+      Proudly Serving: 
+      <a href="wallingford-cleaning.html" style="color: var(--blue); text-decoration: none; font-weight: 600;">Wallingford</a>, 
+      <a href="north-haven-cleaning.html" style="color: var(--blue); text-decoration: none; font-weight: 600;">North Haven</a>, 
+      <a href="cheshire-cleaning.html" style="color: var(--blue); text-decoration: none; font-weight: 600;">Cheshire</a> • 
+      © <span id="year"></span> • <a href="index.html" style="color: var(--blue); text-decoration: none;">Home</a>
+    </p>
   </footer>
 
   <script>
