Change 'Home' link text to uppercase 'HOME'

--- a/deep-clean.html
+++ b/deep-clean.html
@@ -206,7 +206,7 @@
       <a href="wallingford-cleaning.html" style="color: var(--blue); text-decoration: none; font-weight: 600;">Wallingford</a>, 
       <a href="north-haven-cleaning.html" style="color: var(--blue); text-decoration: none; font-weight: 600;">North Haven</a>, 
       <a href="cheshire-cleaning.html" style="color: var(--blue); text-decoration: none; font-weight: 600;">Cheshire</a> • 
-      © <span id="year"></span> • <a href="index.html" style="color: var(--blue); text-decoration: none;">Home</a>
+      © <span id="year"></span> • <a href="index.html" style="color: var(--blue); text-decoration: none;">HOME</a>
     </p>
   </footer>
 
