--- a/deep-clean.html
+++ b/deep-clean.html
@@ -99,18 +99,18 @@
       <div style="display: grid; grid-template-columns: repeat(auto-fit, minmax(200px, 1fr)); gap: 20px; margin-top: 20px;">
         <div>
           <img src="images/icon-placeholder-1.png" alt="Icon" style="width: 60px; margin-bottom: 10px;">
-          <h3 style="font-size: 1.3rem; margin: 10px 0;">Benefit #1</h3>
-          <p>Short description of this benefit.</p>
+          <h3 style="font-size: 1.3rem; margin: 10px 0;">A clean restart for your home!</h3>
+          <p>WE can help you restart your home for a new season, holiday party, or anytime you wish.</p>
         </div>
         <div>
           <img src="images/icon-placeholder-2.png" alt="Icon" style="width: 60px; margin-bottom: 10px;">
-          <h3 style="font-size: 1.3rem; margin: 10px 0;">Benefit #2</h3>
-          <p>Short description of this benefit.</p>
+          <h3 style="font-size: 1.3rem; margin: 10px 0;">Improve air quality and lighting!</h3>
+          <p>Breath better, feel better, and actually be able to see the corners in your home again.</p>
         </div>
         <div>
           <img src="images/icon-placeholder-3.png" alt="Icon" style="width: 60px; margin-bottom: 10px;">
-          <h3 style="font-size: 1.3rem; margin: 10px 0;">Benefit #3</h3>
-          <p>Short description of this benefit.</p>
+          <h3 style="font-size: 1.3rem; margin: 10px 0;">We get those hard to reach places!</h3>
+          <p>Vents, ceiling fans, high ceilings are all no match for us!</p>
         </div>
       </div>
     </section>
@@ -148,8 +148,7 @@
       <h2>Serving Your Community</h2>
       <p>NeatNest LLC proudly provides [SERVICE NAME] throughout:</p>
       <p style="font-weight: 600; color: var(--blue);">
-        Wallingford • Cheshire • Branford • Guilford • East Haven<br>
-        Durham • Madison • Middlefield • North Branford • North Haven
+        Wallingford • North Haven • Cheshire
       </p>
     </section>
 
