--- a/deep-clean.html
+++ b/deep-clean.html
@@ -41,8 +41,8 @@
     </div>
     
     <img src="images/logo.jpg" alt="NeatNest LLC logo" class="logo" />
-    <h1>[SERVICE NAME] | NeatNest LLC</h1>
-    <p>Professional [SERVICE NAME] in Wallingford, CT & surrounding areas</p>
+    <h1>Deep House Cleaning in Wallingford, North Haven & Cheshire, CT</h1>
+    <p>Professional Top-to-Bottom Deep Cleaning service in Wallingford, CT & surrounding areas</p>
     <a class="call-btn" href="tel:+12035007034">CALL NOW</a>
   </header>
 
@@ -51,9 +51,10 @@
     <section class="section">
       <img src="images/service-hero-placeholder.jpg" alt="[SERVICE NAME]" style="width: 100%; max-width: 800px; border-radius: 12px; margin-bottom: 20px;">
       
-      <h2>[SERVICE NAME]</h2>
-      <p><strong>Brief service tagline or key benefit goes here.</strong></p>
-      <p>This is where you describe the service in 2-3 sentences. Explain what makes this service valuable and who it's perfect for. Keep it simple and benefit-focused.</p>
+      <h2>Top to Bottom Deep Clean</h2>
+      <p><strong>Thorough, top-to-bottom cleaning for homes that need extra attention.</strong></p>
+      <p>NeatNest LLC provides professional deep house cleaning services for homeowners in Wallingford, North Haven, and Cheshire CT. Whether your home hasn’t been professionally cleaned in a while or you’re preparing for a special event, our deep cleaning service restores your space to a detailed, refreshed condition.
+         We focus on high-touch areas, buildup removal, and the overlooked details that standard cleaning doesn’t cover.</p>
     </section>
 
     <!-- What's Included Section - TWO COLUMNS -->
@@ -61,14 +62,14 @@
       <h2>What's Included</h2>
       <div style="display: grid; grid-template-columns: 1fr 1fr; gap: 20px 40px; max-width: 800px; margin: 20px auto; text-align: left;">
         <ul style="margin: 0; padding-left: 20px; line-height: 1.8;">
-          <li>Service feature or task #1</li>
-          <li>Service feature or task #2</li>
+          <li>Empty waste bins</li>
+          <li>Scrub and sanitize bathrooms</li>
           <li>Service feature or task #3</li>
           <li>Service feature or task #4</li>
           <li>Service feature or task #5</li>
           <li>Service feature or task #6</li>
           <li>Service feature or task #7</li>
-          <li>Service feature or task #8</li>
+          <li>Ceiling fans, light fixtures, high vents and fans</li>
         </ul>
         <ul style="margin: 0; padding-left: 20px; line-height: 1.8;">
           <li>Service feature or task #9</li>
