--- a/deep-clean.html
+++ b/deep-clean.html
@@ -96,7 +96,7 @@
 
     <!-- Why Choose Us Section -->
     <section class="section">
-      <h2>Why Choose NeatNest LLC?</h2>
+      <h2>Benefits of a Deep Clean</h2>
       <div style="display: grid; grid-template-columns: repeat(auto-fit, minmax(200px, 1fr)); gap: 20px; margin-top: 20px;">
         <div>
           <img src="images/icon-placeholder-1.png" alt="Icon" style="width: 60px; margin-bottom: 10px;">
