--- a/deep-clean.html
+++ b/deep-clean.html
@@ -236,18 +236,13 @@
       </ul>
     </section>
 
-    <!-- 7) Testimonials (with town tags + internal links) -->
+    <!-- 7) Testimonials (3 TOTAL with town tags + internal links) -->
     <section class="section">
       <h2>What Customers Say</h2>
       
       <div style="background: #f8fafc; padding: 20px; border-radius: 8px; margin: 20px 0; border-left: 4px solid var(--blue);">
         <p style="font-style: italic; margin-bottom: 10px;">"I could not be happier with the service from NeatNest LLC. Had a deep cleaning done before the holidays. It was far beyond what I imagined. Rugs, stove, floors, fixtures. Everything. You won't be disappointed and won't find a more trustworthy service in your home."</p>
         <p style="font-weight: 600; margin: 0;">— David T., <a href="wallingford-cleaning.html" style="color: var(--blue); text-decoration: none;">Wallingford CT</a></p>
-      </div>
-
-      <div style="background: #f8fafc; padding: 20px; border-radius: 8px; margin: 20px 0; border-left: 4px solid var(--blue);">
-        <p style="font-style: italic; margin-bottom: 10px;">"Mike and his crew are a pleasure to have in our home. The company is run in a businesslike way, with Mike being very professional. They are reliable, friendly, and trustworthy."</p>
-        <p style="font-weight: 600; margin: 0;">— Jennifer L., <a href="wallingford-cleaning.html" style="color: var(--blue); text-decoration: none;">Wallingford CT</a></p>
       </div>
 
       <div style="background: #f8fafc; padding: 20px; border-radius: 8px; margin: 20px 0; border-left: 4px solid var(--blue);">
