--- a/deep-clean.html
+++ b/deep-clean.html
@@ -202,18 +202,33 @@
       </style>
     </section>
 
-    <!-- 5) Benefits (why deep clean) -->
+    <!-- 5) Benefits (3 logos side by side with descriptions) -->
     <section class="section">
       <h2>Benefits of a Deep Clean</h2>
-      <ul style="text-align: left; max-width: 700px; margin: 20px auto; line-height: 1.9; font-size: 1.1rem;">
-        <li><strong>Remove Built-Up Grime:</strong> Eliminate dirt, grease, and residue that accumulates over time.</li>
-        <li><strong>Fresh Reset:</strong> Perfect before holidays, events, or the start of a new season.</li>
-        <li><strong>Allergen Reduction:</strong> Deep dusting and vacuuming help reduce dust, pollen, and pet dander.</li>
-        <li><strong>Healthier Environment:</strong> Sanitizing high-touch surfaces reduces germs and bacteria.</li>
-        <li><strong>Improved Air Quality:</strong> Cleaning vents, fans, and filters helps your home breathe better.</li>
-        <li><strong>Increased Home Value:</strong> A spotless home makes a better impression for showings or guests.</li>
-        <li><strong>Peace of Mind:</strong> Enjoy a truly clean home without the stress of tackling it yourself.</li>
-      </ul>
+      <div style="display: grid; grid-template-columns: repeat(auto-fit, minmax(220px, 1fr)); gap: 30px; margin-top: 30px; max-width: 900px; margin-left: auto; margin-right: auto;">
+        
+        <!-- Benefit 1 -->
+        <div style="text-align: center;">
+          <img src="images/benefit1logo.png" alt="Fresh Reset" style="width: 80px; height: 80px; margin-bottom: 15px;">
+          <h3 style="font-size: 1.3rem; margin: 10px 0; color: var(--blue);">Fresh Reset</h3>
+          <p style="margin: 0; line-height: 1.6;">Perfect before holidays, events, or the start of a new season. Remove built-up grime and restore your home.</p>
+        </div>
+
+        <!-- Benefit 2 -->
+        <div style="text-align: center;">
+          <img src="images/benefit2logo.png" alt="Healthier Home" style="width: 80px; height: 80px; margin-bottom: 15px;">
+          <h3 style="font-size: 1.3rem; margin: 10px 0; color: var(--blue);">Healthier Home</h3>
+          <p style="margin: 0; line-height: 1.6;">Reduce allergens, dust, and bacteria. Deep cleaning improves air quality and creates a healthier environment.</p>
+        </div>
+
+        <!-- Benefit 3 -->
+        <div style="text-align: center;">
+          <img src="images/benefit3logo.png" alt="Hard to Reach Areas" style="width: 80px; height: 80px; margin-bottom: 15px;">
+          <h3 style="font-size: 1.3rem; margin: 10px 0; color: var(--blue);">Hard to Reach Areas</h3>
+          <p style="margin: 0; line-height: 1.6;">We tackle ceiling fans, vents, baseboards, and all those spots that are easy to overlook but make a big difference.</p>
+        </div>
+
+      </div>
     </section>
 
     <!-- 6) "See the Difference" (visual section) -->
