Update deep-clean.html to enhance description
Removed list of cleaning benefits and added a descriptive paragraph about the transformation of a kitchen.

--- a/deep-clean.html
+++ b/deep-clean.html
@@ -244,11 +244,9 @@
           <p style="margin-top: 8px; font-weight: 600;">After</p>
         </div>
       </div>
-      <ul style="text-align: left; max-width: 700px; margin: 20px auto; line-height: 1.8;">
-        <li>Stubborn grease and buildup removed from kitchen surfaces</li>
-        <li>Baseboards, trim, and corners restored to like-new condition</li>
-        <li>Bright, fresh spaces that feel welcoming and comfortable</li>
-      </ul>
+      <p style="text-align: center; margin-top: 20px; font-size: 1.1rem; line-height: 1.6;">
+        A picture of how our Top-to-Bottom Deep Clean transformed this Cheshire homeowner's kitchen!
+      </p>
     </section>
 
     <!-- 7) Testimonials (3 TOTAL with town tags + internal links) -->
