Update footer section with additional content

--- a/deep-clean.html
+++ b/deep-clean.html
@@ -415,19 +415,23 @@
 
   </main>
 
-  <!-- 12) Footer -->
+  <!-- 12) Footer - Two Lines -->
   <footer class="site-footer" style="background: var(--card); color: var(--ink); padding: 20px; text-align: center; border-top: 3px solid var(--blue); font-size: 0.95rem;">
-    <p style="margin: 0; line-height: 1.6;">
+    <!-- Line 1: Business NAP -->
+    <p style="margin: 0 0 8px 0; line-height: 1.6;">
       <strong>NeatNest LLC</strong> • 274 Woodhouse Ave, Wallingford, CT 06492 • 
       <a href="tel:+12035007034" style="color: var(--blue); text-decoration: none; font-weight: 600;">(203) 500-7034</a> • 
-      <a href="mailto:info@neatnestllc.com" style="color: var(--blue); text-decoration: none;">info@neatnestllc.com</a> • 
+      <a href="mailto:info@neatnestllc.com" style="color: var(--blue); text-decoration: none;">info@neatnestllc.com</a>
+    </p>
+    
+    <!-- Line 2: Proudly Serving with Town Links -->
+    <p style="margin: 0; line-height: 1.6;">
       Proudly Serving: 
       <a href="wallingford-cleaning.html" style="color: var(--blue); text-decoration: none; font-weight: 600;">Wallingford</a>, 
       <a href="north-haven-cleaning.html" style="color: var(--blue); text-decoration: none; font-weight: 600;">North Haven</a>, 
       <a href="cheshire-cleaning.html" style="color: var(--blue); text-decoration: none; font-weight: 600;">Cheshire</a> • 
       © <span id="year"></span> • 
-      <a href="index.html" style="color: var(--blue); text-decoration: none;">Home</a> • 
-      <a href="#quote" style="color: var(--blue); text-decoration: none;">Contact</a>
+      <a href="index.html" style="color: var(--blue); text-decoration: none;">Home</a>
     </p>
   </footer>
 
