Refactor footer for compact design and spacing

--- a/deep-clean.html
+++ b/deep-clean.html
@@ -415,17 +415,17 @@
 
   </main>
 
-  <!-- 12) Footer - Two Lines -->
-  <footer class="site-footer" style="background: var(--card); color: var(--ink); padding: 20px; text-align: center; border-top: 3px solid var(--blue); font-size: 0.95rem;">
+  <!-- 12) Footer - Compact with minimal spacing -->
+  <footer class="site-footer" style="background: var(--card); color: var(--ink); padding: 12px 20px; text-align: center; border-top: 3px solid var(--blue); font-size: 0.95rem;">
     <!-- Line 1: Business NAP -->
-    <p style="margin: 0 0 8px 0; line-height: 1.6;">
+    <p style="margin: 0 0 3px 0; line-height: 1.4;">
       <strong>NeatNest LLC</strong> • 274 Woodhouse Ave, Wallingford, CT 06492 • 
       <a href="tel:+12035007034" style="color: var(--blue); text-decoration: none; font-weight: 600;">(203) 500-7034</a> • 
       <a href="mailto:info@neatnestllc.com" style="color: var(--blue); text-decoration: none;">info@neatnestllc.com</a>
     </p>
     
     <!-- Line 2: Proudly Serving with Town Links -->
-    <p style="margin: 0; line-height: 1.6;">
+    <p style="margin: 0; line-height: 1.4;">
       Proudly Serving: 
       <a href="wallingford-cleaning.html" style="color: var(--blue); text-decoration: none; font-weight: 600;">Wallingford</a>, 
       <a href="north-haven-cleaning.html" style="color: var(--blue); text-decoration: none; font-weight: 600;">North Haven</a>, 
