--- a/deep-clean.html
+++ b/deep-clean.html
@@ -431,7 +431,7 @@
       <a href="north-haven-cleaning.html" style="color: var(--blue); text-decoration: none; font-weight: 600;">North Haven</a>, 
       <a href="cheshire-cleaning.html" style="color: var(--blue); text-decoration: none; font-weight: 600;">Cheshire</a> • 
       © <span id="year"></span> • 
-      <a href="index.html" style="color: var(--blue); text-decoration: none;">Home</a>
+      <a href="index.html" style="color: var(--blue); text-decoration: none;">HOME</a>
     </p>
   </footer>
 
