--- a/deep-clean.html
+++ b/deep-clean.html
@@ -133,9 +133,9 @@
       <h2>What's Included in Our Deep Cleaning</h2>
       
       <!-- Kitchen -->
-      <h3 style="color: var(--blue); margin-top: 25px; text-align: left; max-width: 800px; margin-left: auto; margin-right: auto;">Kitchen</h3>
-      <div style="max-width: 800px; margin: 10px auto; text-align: left;">
-        <ul style="margin: 0; padding-left: 20px; line-height: 1.8; columns: 2; column-gap: 40px;">
+      <h3 style="color: var(--blue); margin: 15px auto 8px; text-align: center; max-width: 800px;">Kitchen</h3>
+      <div style="max-width: 800px; margin: 0 auto 10px; text-align: left;">
+        <ul style="margin: 0; padding-left: 20px; line-height: 1.6; columns: 2; column-gap: 40px;">
           <li>Degrease stovetop, backsplash, and range hood</li>
           <li>Wipe down all cabinet fronts and handles</li>
           <li>Clean and sanitize countertops</li>
@@ -148,9 +148,9 @@
       </div>
 
       <!-- Bathrooms -->
-      <h3 style="color: var(--blue); margin-top: 25px; text-align: left; max-width: 800px; margin-left: auto; margin-right: auto;">Bathrooms</h3>
-      <div style="max-width: 800px; margin: 10px auto; text-align: left;">
-        <ul style="margin: 0; padding-left: 20px; line-height: 1.8; columns: 2; column-gap: 40px;">
+      <h3 style="color: var(--blue); margin: 15px auto 8px; text-align: center; max-width: 800px;">Bathrooms</h3>
+      <div style="max-width: 800px; margin: 0 auto 10px; text-align: left;">
+        <ul style="margin: 0; padding-left: 20px; line-height: 1.6; columns: 2; column-gap: 40px;">
           <li>Scrub and disinfect toilets (inside and out)</li>
           <li>Clean and sanitize sinks and countertops</li>
           <li>Scrub tubs, showers, tiles, and grout</li>
@@ -163,9 +163,9 @@
       </div>
 
       <!-- Bedrooms & Living Areas -->
-      <h3 style="color: var(--blue); margin-top: 25px; text-align: left; max-width: 800px; margin-left: auto; margin-right: auto;">Bedrooms & Living Areas</h3>
-      <div style="max-width: 800px; margin: 10px auto; text-align: left;">
-        <ul style="margin: 0; padding-left: 20px; line-height: 1.8; columns: 2; column-gap: 40px;">
+      <h3 style="color: var(--blue); margin: 15px auto 8px; text-align: center; max-width: 800px;">Bedrooms & Living Areas</h3>
+      <div style="max-width: 800px; margin: 0 auto 10px; text-align: left;">
+        <ul style="margin: 0; padding-left: 20px; line-height: 1.6; columns: 2; column-gap: 40px;">
           <li>Dust ceiling fans, light fixtures, and vents</li>
           <li>Wipe down baseboards and door frames</li>
           <li>Clean window sills and tracks</li>
@@ -178,9 +178,9 @@
       </div>
 
       <!-- Optional Add-Ons -->
-      <h3 style="color: var(--blue); margin-top: 25px; text-align: left; max-width: 800px; margin-left: auto; margin-right: auto;">Optional Add-Ons</h3>
-      <div style="max-width: 800px; margin: 10px auto; text-align: left;">
-        <ul style="margin: 0; padding-left: 20px; line-height: 1.8; columns: 2; column-gap: 40px;">
+      <h3 style="color: var(--blue); margin: 15px auto 8px; text-align: center; max-width: 800px;">Optional Add-Ons</h3>
+      <div style="max-width: 800px; margin: 0 auto 10px; text-align: left;">
+        <ul style="margin: 0; padding-left: 20px; line-height: 1.6; columns: 2; column-gap: 40px;">
           <li>Inside refrigerator cleaning</li>
           <li>Inside oven cleaning</li>
           <li>Interior window washing</li>
