Update section headers to use blue color and uppercase

--- a/deep-clean.html
+++ b/deep-clean.html
@@ -133,7 +133,7 @@
       <h2>What's Included in Our Deep Cleaning</h2>
       
       <!-- Kitchen -->
-      <h3 style="color: var(--orange); margin: 15px auto 8px; text-align: center; max-width: 800px; font-size: 1.5rem; text-transform: uppercase; letter-spacing: 0.5px;">Kitchen</h3>
+      <h3 style="color: var(--blue); margin: 15px auto 8px; text-align: center; max-width: 800px; text-transform: uppercase;">KITCHEN</h3>
       <div style="max-width: 800px; margin: 0 auto 10px; text-align: left;">
         <ul style="margin: 0; padding-left: 20px; line-height: 1.6; columns: 2; column-gap: 40px;">
           <li>Degrease stovetop, backsplash, and range hood</li>
@@ -148,7 +148,7 @@
       </div>
 
       <!-- Bathrooms -->
-      <h3 style="color: var(--orange); margin: 15px auto 8px; text-align: center; max-width: 800px; font-size: 1.5rem; text-transform: uppercase; letter-spacing: 0.5px;">Bathrooms</h3>
+      <h3 style="color: var(--blue); margin: 15px auto 8px; text-align: center; max-width: 800px; text-transform: uppercase;">BATHROOMS</h3>
       <div style="max-width: 800px; margin: 0 auto 10px; text-align: left;">
         <ul style="margin: 0; padding-left: 20px; line-height: 1.6; columns: 2; column-gap: 40px;">
           <li>Scrub and disinfect toilets (inside and out)</li>
@@ -163,7 +163,7 @@
       </div>
 
       <!-- Bedrooms & Living Areas -->
-      <h3 style="color: var(--orange); margin: 15px auto 8px; text-align: center; max-width: 800px; font-size: 1.5rem; text-transform: uppercase; letter-spacing: 0.5px;">Bedrooms & Living Areas</h3>
+      <h3 style="color: var(--blue); margin: 15px auto 8px; text-align: center; max-width: 800px; text-transform: uppercase;">BEDROOMS & LIVING AREAS</h3>
       <div style="max-width: 800px; margin: 0 auto 10px; text-align: left;">
         <ul style="margin: 0; padding-left: 20px; line-height: 1.6; columns: 2; column-gap: 40px;">
           <li>Dust ceiling fans, light fixtures, and vents</li>
@@ -178,7 +178,7 @@
       </div>
 
       <!-- Optional Add-Ons -->
-      <h3 style="color: var(--orange); margin: 15px auto 8px; text-align: center; max-width: 800px; font-size: 1.5rem; text-transform: uppercase; letter-spacing: 0.5px;">Optional Add-Ons</h3>
+      <h3 style="color: var(--blue); margin: 15px auto 8px; text-align: center; max-width: 800px; text-transform: uppercase;">OPTIONAL ADD-ONS</h3>
       <div style="max-width: 800px; margin: 0 auto 10px; text-align: left;">
         <ul style="margin: 0; padding-left: 20px; line-height: 1.6; columns: 2; column-gap: 40px;">
           <li>Inside refrigerator cleaning</li>
