Refactor Other Services section for better layout
Updated the layout and styling of the Other Services section for improved spacing and button alignment.

--- a/deep-clean.html
+++ b/deep-clean.html
@@ -399,18 +399,18 @@
       </div>
     </section>
 
-    <!-- 11) Other Services (internal links) -->
+    <!-- 11) Other Services (internal links) - TIGHTER SPACING & VERTICAL BUTTONS -->
     <section class="section" style="background: #f8fafc;">
-      <h2>Other Cleaning Services</h2>
-      <p>NeatNest LLC offers a complete range of professional cleaning services for your home or business:</p>
-      <div style="display: flex; flex-wrap: wrap; gap: 10px; justify-content: center; margin-top: 15px;">
-        <a href="routine-housekeeping.html" style="padding: 10px 20px; background: var(--blue); color: white; text-decoration: none; border-radius: 6px; font-weight: 600;">Standard Cleaning</a>
-        <a href="recurring-cleaning.html" style="padding: 10px 20px; background: var(--blue); color: white; text-decoration: none; border-radius: 6px; font-weight: 600;">Recurring Cleaning</a>
-        <a href="move-in-out.html" style="padding: 10px 20px; background: var(--blue); color: white; text-decoration: none; border-radius: 6px; font-weight: 600;">Move-In/Move-Out</a>
-        <a href="office-cleaning.html" style="padding: 10px 20px; background: var(--blue); color: white; text-decoration: none; border-radius: 6px; font-weight: 600;">Office/Commercial</a>
-        <a href="carpet-upholstery.html" style="padding: 10px 20px; background: var(--blue); color: white; text-decoration: none; border-radius: 6px; font-weight: 600;">Carpet & Upholstery</a>
+      <h2 style="margin-bottom: 8px;">Other Cleaning Services</h2>
+      <p style="margin-top: 0; margin-bottom: 12px;">NeatNest LLC offers a complete range of professional cleaning services for your home or business:</p>
+      <div style="display: flex; flex-direction: column; gap: 8px; align-items: center; max-width: 400px; margin: 0 auto;">
+        <a href="routine-housekeeping.html" style="padding: 12px 20px; background: var(--blue); color: white; text-decoration: none; border-radius: 6px; font-weight: 600; width: 100%; text-align: center;">Standard Cleaning</a>
+        <a href="recurring-cleaning.html" style="padding: 12px 20px; background: var(--blue); color: white; text-decoration: none; border-radius: 6px; font-weight: 600; width: 100%; text-align: center;">Recurring Cleaning</a>
+        <a href="move-in-out.html" style="padding: 12px 20px; background: var(--blue); color: white; text-decoration: none; border-radius: 6px; font-weight: 600; width: 100%; text-align: center;">Move-In/Move-Out</a>
+        <a href="office-cleaning.html" style="padding: 12px 20px; background: var(--blue); color: white; text-decoration: none; border-radius: 6px; font-weight: 600; width: 100%; text-align: center;">Office/Commercial</a>
+        <a href="carpet-upholstery.html" style="padding: 12px 20px; background: var(--blue); color: white; text-decoration: none; border-radius: 6px; font-weight: 600; width: 100%; text-align: center;">Carpet & Upholstery</a>
       </div>
-      <p style="margin-top: 20px;"><a href="index.html" style="color: var(--blue); font-weight: 600;">← Back to Home</a></p>
+      <p style="margin-top: 15px; margin-bottom: 0;"><a href="index.html" style="color: var(--blue); font-weight: 600;">← Back to Home</a></p>
     </section>
 
   </main>
