Fix link to Wallingford cleaning page

--- a/deep-clean.html
+++ b/deep-clean.html
@@ -427,7 +427,7 @@
     <!-- Line 2: Proudly Serving with Town Links -->
     <p style="margin: 0; line-height: 1.4;">
       Proudly Serving: 
-      <a href="wallingford-cleaning.html" style="color: var(--blue); text-decoration: none; font-weight: 600;">Wallingford</a>, 
+      <a href="Wallingford-cleaning-page.html" style="color: var(--blue); text-decoration: none; font-weight: 600;">Wallingford</a>, 
       <a href="north-haven-cleaning.html" style="color: var(--blue); text-decoration: none; font-weight: 600;">North Haven</a>, 
       <a href="cheshire-cleaning.html" style="color: var(--blue); text-decoration: none; font-weight: 600;">Cheshire</a> • 
       © <span id="year"></span> • 
