--- a/deep-clean.html
+++ b/deep-clean.html
@@ -255,17 +255,17 @@
       
       <div style="background: #f8fafc; padding: 20px; border-radius: 8px; margin: 20px 0; border-left: 4px solid var(--blue);">
         <p style="font-style: italic; margin-bottom: 10px;">"I could not be happier with the service from NeatNest LLC. Had a deep cleaning done before the holidays. It was far beyond what I imagined. Rugs, stove, floors, fixtures. Everything. You won't be disappointed and won't find a more trustworthy service in your home."</p>
-        <p style="font-weight: 600; margin: 0;">— David T., <a href="wallingford-cleaning.html" style="color: var(--blue); text-decoration: none;">Wallingford CT</a></p>
+        <p style="font-weight: 600; margin: 0;">— David T., <a href="wallingford-ct-house-cleaning.html" style="color: var(--blue); text-decoration: none;">Wallingford CT</a></p>
       </div>
 
       <div style="background: #f8fafc; padding: 20px; border-radius: 8px; margin: 20px 0; border-left: 4px solid var(--blue);">
         <p style="font-style: italic; margin-bottom: 10px;">"Top notch attention to detail. I've tried numerous other cleaning services and no one even comes close!"</p>
-        <p style="font-weight: 600; margin: 0;">— Nicki B., <a href="cheshire-cleaning.html" style="color: var(--blue); text-decoration: none;">Cheshire CT</a></p>
+        <p style="font-weight: 600; margin: 0;">— Nicki B., <a href="cheshire-ct-house-cleaning.html" style="color: var(--blue); text-decoration: none;">Cheshire CT</a></p>
       </div>
 
       <div style="background: #f8fafc; padding: 20px; border-radius: 8px; margin: 20px 0; border-left: 4px solid var(--blue);">
         <p style="font-style: italic; margin-bottom: 10px;">"Michael and his team came to clean my condo and they did an amazing job. I walked in and could smell the cleanliness in the air. The price is very reasonable for what you get. I will definitely be using them again!"</p>
-        <p style="font-weight: 600; margin: 0;">— Sarah M., <a href="north-haven-cleaning.html" style="color: var(--blue); text-decoration: none;">North Haven CT</a></p>
+        <p style="font-weight: 600; margin: 0;">— Sarah M., <a href="north-haven-ct-house-cleaning.html" style="color: var(--blue); text-decoration: none;">North Haven CT</a></p>
       </div>
     </section>
 
